# macos-modmanager

./: .gitignore  AGENTS.md  DATABASE_SCHEMA.md  FEATURES.md  README.md  TEST_REPORT_MACOS_DISCOVERY.md  VIEWS_PLAN.md  WEB_APP_FEATURES.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
alembic/: env.py
app/: config.py  main.py
docs/: ARCHITECTURE.md  BINARY_ANALYSIS_REPORT.md  COMMAND_BUFFER_ANALYSIS_RESULTS.md  COMPATIBILITY_SYSTEM.md  COMPREHENSIVE_RESULTS_ANALYSIS.md  CRITICAL_TESTING_FUNCTIONS.md  CURRENT_RUN_STATUS.md  DESIGN_SYSTEM.md  EXECUTION_STATUS.md  FRIDA_PROFILER_STRESS_TESTING.md  FSR_VS_METALFX_ANALYSIS.md  GPU_PROFILER_EXPLORATION.md  IMPROVEMENT_ROADMAP.md  MACOS_PORTING_AUDIT.md  METAL_SYSTEM_TRACE_GUIDE.md  PLAN_EXECUTION_SUMMARY.md  PROFILER_RUN_ANALYSIS.md  RAY_TRACING_OPTIMIZATION_REPORT.md  RT_OPTIMIZATION_PHASED_PLAN.md  RT_OPTIMIZATION_QUICK_REFERENCE.md  RT_REVERSE_ENGINEERING_DETAILED.json  RT_REVERSE_ENGINEERING_REPORT.md  STATUS.md  SWIFT_REWRITE_COMPLEXITY_ANALYSIS.md  SYNC_OPTIMIZATION_MOD_RESEARCH.md  command_buffer_analysis_20260101_201756.json
scripts/: command_buffer_profiler.py  extended_baseline_profiler.py  install_compatible_mods.sh  install_mods.py  rt_feature_toggle_benchmark.py  run_burst_rt_profiler.py  run_optimization_phase.py  run_profiler.py  run_profiler_stress.py  start_rt_profiler.py
tests/: README.md  __init__.py  conftest.py  test_backup_conflicting_files.py  test_detect_mod_structure.py  test_enable_mod.py  test_extract_archive.py  test_fomod_installation.py  test_get_files_to_install.py  test_install_from_nexus.py  (+2 more)
(+167 files in other folders)
