[project]
name = "macos-modmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiosqlite==0.19.0",
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "jinja2==3.1.2",
    "passlib[bcrypt]==1.7.4",
    "py7zr==0.21.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "rarfile==4.1",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
    "watchdog==3.0.0",
]
