[project]
name = "macos-modmanager"
version = "0.1.0"
description = "Cyberpunk 2077 Mod Manager for macOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiosqlite==0.19.0",
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "greenlet>=3.3.0",
    "httpx==0.25.2",
    "jinja2==3.1.6",
    "passlib[bcrypt]==1.7.4",
    "py7zr==0.21.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==44.0.1",
    "python-multipart==0.0.18",
    "rarfile==4.1",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
    "watchdog==3.0.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "frida>=16.0.0,<17",
    "textual>=0.47.0",
    "psutil>=5.9.6",
]

[project.scripts]
mod-manager-tui = "app.tui.app:main"
mod-manager = "app.tui.app:cli_main"
